syntax = "proto3";

package astria.protocol.genesis.v1;

import "astria/primitive/v1/types.proto";
import "astria/protocol/fees/v1/types.proto";
import "connect/marketmap/v2/genesis.proto";
import "connect/oracle/v2/genesis.proto";

message GenesisAppState {
  string chain_id = 1;
  AddressPrefixes address_prefixes = 2;
  repeated Account accounts = 3;
  astria.primitive.v1.Address authority_sudo_address = 4;
  astria.primitive.v1.Address ibc_sudo_address = 5;
  repeated astria.primitive.v1.Address ibc_relayer_addresses = 6;
  string native_asset_base_denomination = 7;
  IbcParameters ibc_parameters = 8;
  repeated string allowed_fee_assets = 9;
  GenesisFees fees = 10;
  ConnectGenesis connect = 11;
}

message Account {
  astria.primitive.v1.Address address = 1;
  astria.primitive.v1.Uint128 balance = 2;
}

message AddressPrefixes {
  // The base prefix used for most Astria Sequencer addresses.
  string base = 1;
  // The prefix used for sending ics20 transfers to IBC chains
  // that enforce a bech32 format of the packet sender.
  string ibc_compat = 2;
}

// IBC configuration data.
message IbcParameters {
  // Whether IBC (forming connections, processing IBC packets) is enabled.
  bool ibc_enabled = 1;
  // Whether inbound ICS-20 transfers are enabled
  bool inbound_ics20_transfers_enabled = 2;
  // Whether outbound ICS-20 transfers are enabled
  bool outbound_ics20_transfers_enabled = 3;
}

message GenesisFees {
  astria.protocol.fees.v1.BridgeLockFeeComponents bridge_lock = 1;
  astria.protocol.fees.v1.BridgeSudoChangeFeeComponents bridge_sudo_change = 2;
  astria.protocol.fees.v1.BridgeUnlockFeeComponents bridge_unlock = 3;
  astria.protocol.fees.v1.FeeAssetChangeFeeComponents fee_asset_change = 4;
  astria.protocol.fees.v1.FeeChangeFeeComponents fee_change = 5;
  astria.protocol.fees.v1.IbcRelayFeeComponents ibc_relay = 7;
  astria.protocol.fees.v1.IbcRelayerChangeFeeComponents ibc_relayer_change = 6;
  astria.protocol.fees.v1.IbcSudoChangeFeeComponents ibc_sudo_change = 8;
  astria.protocol.fees.v1.Ics20WithdrawalFeeComponents ics20_withdrawal = 9;
  astria.protocol.fees.v1.InitBridgeAccountFeeComponents init_bridge_account = 10;
  astria.protocol.fees.v1.RollupDataSubmissionFeeComponents rollup_data_submission = 11;
  astria.protocol.fees.v1.SudoAddressChangeFeeComponents sudo_address_change = 12;
  astria.protocol.fees.v1.TransferFeeComponents transfer = 13;
  astria.protocol.fees.v1.ValidatorUpdateFeeComponents validator_update = 14;
  astria.protocol.fees.v1.UpsertMarketsFeeComponents upsert_markets = 15;
  astria.protocol.fees.v1.CreateMarketsFeeComponents create_markets = 16;
  astria.protocol.fees.v1.UpdateMarketsFeeComponents update_markets = 17;
  astria.protocol.fees.v1.UpdateMarketMapParamsFeeComponents update_market_map_params = 18;
  astria.protocol.fees.v1.RemoveMarketAuthoritiesFeeComponents remove_market_authorities = 19;
  astria.protocol.fees.v1.RemoveMarketsFeeComponents remove_markets = 20;
}

message ConnectGenesis {
  connect.marketmap.v2.GenesisState market_map = 1;
  connect.oracle.v2.GenesisState oracle = 2;
}
